client/server update