@@ -4,6 +4,7 @@ import java.util.Date;
 import java.text.DateFormat;
 import java.text.SimpleDateFormat;
 import java.util.Calendar;
+import java.util.Scanner;
 
 /*
 The server that runs on the same machine that elasticsearch is running on. The server program
@@ -53,6 +54,7 @@ class server {
 		//get a free port and print the port number. This will be the port that the client will
 		//send the key and query to for our wrapper to handle
 		ServerSocket welcomeSocket = new ServerSocket(0);
+		int PORT = welcomeSocket.getLocalPort();
 		System.out.println("SERVER_PORT="+welcomeSocket.getLocalPort());
 
     	//always listening for a new client, processing one client at a time
@@ -63,78 +65,55 @@ class server {
 			DataOutputStream outToClient = new DataOutputStream(connectionSocket.getOutputStream());
 			
 			//Acquire key
-			String clientCodeKey = inFromClient.readLine();
-			System.out.println("clientCode="+clientCodeKey);
-			
-			//Acquire query
-			String query = "";
-			System.out.println("query=");
-			try{
-				String line = null;
-				while((line=inFromClient.readLine())!=null){
-					if(line.equals("{!}QUERY_FINISHED{!}")){
-						break;
-					}
-					System.out.println(line);
-					query+=(line+"\n");
-				}
-			}
-			catch(Exception e){
-				System.out.println("Query parse error.");
-			}
+			String query = inFromClient.readLine();
+			int port = Integer.parseInt(inFromClient.readLine());
+			System.out.println("seachWord="+query);
+			System.out.println("client_port="+port);
 
-			//write query to file to be executed once file is decrypted
+			//write query to file to be executed 
 			String queryFileName = "";
 			try {
 				Writer writer = null;
 				DateFormat dateFormat = new SimpleDateFormat("yyyy.MM.dd.HH:mm:ss:ms");
 				Date date = new Date();
-				queryFileName = "query";//dateFormat.format(date);System.out.println(queryFileName);
+				queryFileName = "query.sh";
 				writer = new BufferedWriter(new OutputStreamWriter(
 				new FileOutputStream(queryFileName), "utf-8"));
-				writer.write(query);writer.close();
+				writer.write("#!/bin/bash\n");
+				writer.write("curl -XGET http://localhost:9200/newindex/_search?pretty=true -d '{\"query\":{\"match\":{\"content\":\""+query+"\"}}}' > out.txt");
+				writer.close();
 			}
 			catch (IOException ex) {
   				System.out.println("Failure in writing query to file.");
 			}
-
-			//decrypt all appropriate files
-			try{
-				ProcessBuilder pb = new ProcessBuilder(argv[0]+"/decrypt.sh",clientCodeKey);
-				Process p = pb.start();     
-				p.waitFor();                
-				System.out.println("Decrypt script executed successfully");
-			}
-			catch(Exception e){
-				System.out.println("DECRYPT FAIL.");
-				System.exit(0);			
-			}
-
+			
 			//execute query
 			try{
-				ProcessBuilder pb = new ProcessBuilder(argv[0]+"/"+queryFileName);
-				Process p = pb.start();    
-			  	p.waitFor();               
-				System.out.println("Query script executed successfully");
+				Runtime.getRuntime().exec("chmod u+x "+argv[0]+"/"+queryFileName);
+				Runtime.getRuntime().exec(argv[0]+"/"+queryFileName);
 			}
 			catch(Exception e){
 				System.out.println("QUERY FAIL.");
 				System.exit(0);	
 			}
 
-			//encrypt
 			try{
-				ProcessBuilder pb = new ProcessBuilder(argv[0]+"removeUnecrypted.sh",argv[1]);
-				Process p = pb.start();   
-				p.waitFor();               
-				System.out.println("Encrypt script executed successfully");
+				File file = new File("out.txt");
+				BufferedReader br = new BufferedReader(new FileReader(file));
+				String availalbe;
+				while((availalbe = br.readLine()) != null) {
+					outToClient.writeBytes(availalbe+"\n");
+				}
+
 			}
 			catch(Exception e){
-				System.out.println("ENCRYPT FAIL.");
-				System.exit(0);					
-			}
+				
+				System.out.println("FILE TRANSFER FAIL.");
+				
 
+			}	
 			connectionSocket.close();
+
 		}
 	}    
 }
